--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,19 @@
 }
 
 table {
-  border-collapse: collapse;
-  border: 3px solid purple;
-  width: 100%;
+  width: 50%;
   table-layout: fixed;
+  margin: auto;
 }
 
-
 th, td {
-  padding: 15px;
   text-align: left;
+  word-wrap: break-word;
+}
+
+h2 {
+  margin-top: 5em;
+  text-align: center;
 }
 
 .App-header {
