--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,51 @@
 }
 
 table {
-  width: 50%;
   table-layout: fixed;
-  margin: auto;
   padding-left: 25px;
+  margin: auto;
 }
 
 th, td {
   text-align: left;
   word-wrap: break-word;
+  overflow: hidden;
+}
+
+td:nth-of-type(1) {
+  width: 30px;
+}
+
+td:nth-of-type(2) {
+  width: 300px;
+}
+
+td:nth-of-type(3) {
+  width: auto;
+}
+
+td:nth-of-type(4) {
+  width: 20px;
+}
+
+td:nth-of-type(5) {
+  width: auto;
+}
+
+td:nth-of-type(6) {
+  width: 20px;
+}
+
+td:nth-of-type(7) {
+  width: auto;
+}
+
+td:nth-of-type(8) {
+  width: 20px;
+}
+
+td:nth-of-type(9) {
+  width: auto;
 }
 
 h2 {
